# start-hack-2024-food-vision

./: .gitignore  README.md
python-backend/: README.md  pyproject.toml
python-backend/food_vision_backend/api/: main.py
python-backend/food_vision_backend/eval/: compute_eval_statistics.py  download_images.py  generate_eval.py  output_statistics.json  res.csv
python-backend/food_vision_backend/gpt4_vision/: predict_nutritions.py  prompt.py
python-backend/food_vision_backend/gptv/: example.py  predict_nutritions.py  util.py
python-backend/food_vision_backend/local_computer_vision/: example.py  owl.py
python-backend/food_vision_backend/schemas/: nutrition_info.py
python-backend/food_vision_backend/smart_glass_demo/: api.py  main.py
python-backend/food_vision_backend/streamlit/: app.py
react-frontend/: README.md  capacitor.config.ts  ionic.config.json  package-lock.json  package.json  vite.config.ts
react-frontend/src/: App.tsx  util.ts
react-frontend/src/components/: Gauge.css  Gauge.tsx  MainUiController.css  MainUiController.tsx  TrackingNewFoodModal.css  TrackingNewFoodModal.tsx
react-frontend/src/data/: referenceValues.ts
react-frontend/src/pages/: CameraPage.css  CameraPage.tsx  SmartGlassView.css  SmartGlassView.tsx
react-frontend/src/schemas/: nutritionInfo.ts
