[tool.poetry]
name = "food-vision-backend"
version = "0.1.0"
description = ""
authors = ["Matt Sárdi <sardi.matt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.14.2"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pyprojroot = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
